# SQLCarbon

./: .gitignore  README.md  pyproject.toml
sqlcarbon/: __init__.py  cli.py  config_loader.py  connection.py  copier.py  ddl_generator.py  orchestrator.py  parquet_writer.py  schema_reader.py  version_checker.py
